Fixed warnings in Eclipse